kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playlist-sorter-ingress
  namespace: playlist-sorter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: playlist-sorter.app.jumpdrive.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playlist-sorter-service
                port:
                  number: 80
